--- a/Feedbacksystem/templates/pages/edit_user_group.html
+++ b/Feedbacksystem/templates/pages/edit_user_group.html
@@ -11,14 +11,18 @@
 
 {% block feature %}
 
-<form method="post">
-    {% csrf_token %}
-    <label for="group_name">Select Role:</label>
-    <select name="group_name" id="group_name">
-        {% for group in all_groups %}
-        <option value="{{ group.name }}" {% if group in user_groups %} selected {% endif %}>{{ group.name }}</option>
-        {% endfor %}
-    </select>
-    <button type="submit" class="btn custom-btn">Update</button>
-</form>
+<div class="row justify-content-center">
+    <div class="col-md-6">
+        <form method="post">
+            {% csrf_token %}
+            <label for="group_name">Select Role:</label>
+            <select name="group_name" id="group_name"  class="form-select">
+                {% for group in all_groups %}
+                <option value="{{ group.name }}" {% if group in user_groups %} selected {% endif %}>{{ group.name }}</option>
+                {% endfor %}
+            </select>
+            <button type="submit" class="btn custom-btn mt-2">Update</button>
+        </form>
+    </div>
+</div>
 {% endblock feature %}
