--- a/Feedbacksystem/templates/pages/president_view_event_evaluations.html
+++ b/Feedbacksystem/templates/pages/president_view_event_evaluations.html
@@ -33,8 +33,10 @@
         <td></td>
         <td>{{ i.academic_year }}</td>
         <td>{{ i.semester }}</td>
-        <td><a  href="{% url 'view_schoolevent_evaluations' i.pk %}"><button class="btn btn-primary" style=" padding:3px 5px 3px 5px"><i class="bi bi-eye-fill" style="font-size:20px"></i></button></td>
-
+        <td style="display: flex; flex-direction: row; align-items: center; "> 
+            <a href="{% url 'view_society_president_event_evaluations' i.pk %}"><button class="btn btn-primary d-flex align-items-center" style="  padding:1px 7px 1px 7px"><i class="bi bi-eye-fill" style="font-size:20px; margin-right: 5px;"></i>View</button></a> 
+             </td>
+            
     </tr>
 
     {% endfor %}
