--- a/Feedbacksystem/templates/pages/faculty_event_evaluations.html
+++ b/Feedbacksystem/templates/pages/faculty_event_evaluations.html
@@ -1,42 +1,136 @@
 {% extends "pages/facultydashboard.html" %}
-
-{% block title %}Event Feedback and Evaluations{% endblock %}
+{% load static %}
+{% block title %}Manage Events{% endblock %}
 
 {% block header %}
-
-    <h2> Event Feedback and Evaluations </h2>
-    <hr>
-   
-{% endblock header %}
+    
+<h2>Manage Events</h2>
 <hr>
-{% block feature %}
+    {% endblock header %}
+    {% block feature %}
+    <div class="table-responsive">
+        {# Display non-field errors (errors related to the whole form) #}
+        {% if form.non_field_errors %}
+            <div class="alert alert-danger">
+                {% for error in form.non_field_errors %}
+                    <p>{{ error }}</p>
+                {% endfor %}
+            </div>
+        {% endif %}
+        <a class = "btn btn-warning custom-btn" data-bs-toggle="modal" data-bs-target="#exampleModal"> <i class="bi bi-plus-square-fill"> </i>Create Event </a>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Create Event</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <form method="post" action="" enctype="multipart/form-data">
+                {% csrf_token %}
+                <div class="form-group">
+                {{ form.title.label_tag }}
+                {{ form.title }}
+                </div>
+                <div class="form-group">
+                {{ form.date.label_tag }}
+                {{ form.date }}
+                </div>
+                <div class="form-group">
+                {{ form.time.label_tag }}
+                {{ form.time }}
+                </div>
+                <div class="form-group">
+                {{ form.location.label_tag }}
+                {{ form.location }}
+                </div>
+                <div class="form-group">
+                {{ form.event_type.label_tag }}
+                {{ form.event_type }}
+                </div>
+                <div class="form-group">
+                {{ form.event_picture.label_tag }}
+                {{ form.event_picture }}
+                </div>
+                <div class="form-group">
+                {{ form.description.label_tag }}
+                {{ form.description }}
+                </div>
+            
+                
+                <div class="form-group">
+                    {{ form.course_attendees.label_tag }}
+                    <div class="checkbox-list">
+                        {% for course in form.course_attendees %}
+                            <div class="form-check">
+                                {{ course }}
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
+                <div class="form-group">
+                    {{ form.department_attendees.label_tag }}
+                    <div class="checkbox-list">
+                        {% for department in form.department_attendees %}
+                            <div class="form-check">
+                                {{ department }}
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
+                    <p>{{ form.evaluation_status.label_tag }} {{ form.evaluation_status }}</p>
+                    
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="submit" class="btn custom-btn">Create Event</button>
+        </form>
+        </div>
+      </div>
+    </div>
+  </div>
+        <div class="table-responsive">
+            <table class="table table-bordered" style="margin-top: 1em;">
+                <tr>
+                    <th scope="col">Title</th>
+                    <th scope="col">Date</th>
+                    <th scope="col">Time</th>
+                    <th scope="col">Location</th>
+                    <th scope="col">Event Type</th>
+                    <th scope="col">Course/Department Attendees</th>
+                    <th scope="col">Evaluation Status</th>
+                    <th scope="col">Options</th>
+                </tr>
+                
+                {% for i in event %}
+                <tr>
+                    <td>{{ i.title }}</td>
+                    <td>{{ i.date }}</td>
+                    <td>{{ i.time }}</td>
+                    <td>{{ i.location }}</td>
+                    <td>{{ i.event_type }}</td>
+                    <td>
+                        {% for course in i.course_attendees.all %}
+                            {{ course.name }}{% if not forloop.last %}, {% endif %}
+                        {% endfor %}
+                        <br>
+                        {% for department in i.department_attendees.all %}
+                            {{ department.name }}{% if not forloop.last %}, {% endif %}
+                        {% endfor %}
+                    </td>
+                    <td>{{ i.evaluation_identifier }}</td>
+                    <td style="display: flex; flex-direction: row; gap:1em; align-items: center; height: 7em;"> <a href="{% url 'view_faculty_event_evaluations'  i.pk  %}" style="text-decoration: none;"><button class="btn btn-primary d-flex align-items-center" style=" padding:1px 7px 1px 7px"><i class="bi bi-eye-fill" style="font-size:20px; margin-right: 5px;"></i> View</button></a>
 
-</form>
+                        <a href="{% url 'edit_faculty_events'  i.pk  %}" style="text-decoration: none;"><button class="btn btn-warning d-flex align-items-center" style=" padding:1px 7px 1px 7px"><i class="bi bi-pencil-square" style="font-size:20px; margin-right: 5px;"></i>Edit</button></a>
+            
+                        <a href="{% url 'delete_faculty_events'  i.pk  %}" style="text-decoration: none;"><button class="btn btn-danger d-flex align-items-center" style="padding:4px 7px 4px 7px" ><i style="font-size:15px; margin-right: 5px;"  class="bi bi-trash-fill" ></i>Delete</button></a>
+                    </td>
+                      {% endfor %}
+                </tr>
+                   </table>
+        </div>
+       </div>   
+    {% endblock feature %}
 
-
-<table class="table table-bordered table-responsive  " style="margin-top: 1em;">
-    <tr>
-        <th  scope="col">EVENT</th>
-        <th  scope="col">AVERAGE RATING </th>
-        <th  scope="col">COMMENTS </th>
-        <th  scope="col">POLARITY </th>
-        <th  scope="col">ACADEMIC YEAR </th>
-        <th  scope="col">SEMESTER </th>
-        <th  scope="col">OPTIONS </th>
-    </tr>
-    {% for i in events %}
-    <tr>
-        <td>{{ i.event.title }} </td>
-        <td>{{ i.average_rating }}</td>
-        <td>{{ i.suggestions_and_comments }}</td>
-        <td></td>
-        <td>{{ i.academic_year }}</td>
-        <td>{{ i.semester }}</td>
-        <td><a  href="{% url 'view_schoolevent_evaluations' i.pk %}"><button class="btn btn-primary" style=" padding:3px 5px 3px 5px"><i class="bi bi-eye-fill" style="font-size:20px"></i></button></td>
-
-    </tr>
-
-    {% endfor %}
-
-</table>
-{% endblock feature %}
