--- a/Feedbacksystem/templates/pages/facultyfeedbackandevaluations.html
+++ b/Feedbacksystem/templates/pages/facultyfeedbackandevaluations.html
@@ -3,7 +3,7 @@
 {% block title %}SET Evaluations{% endblock %}
 
 {% block header %}
-<div class="container">
+
     
         <h2>Student Feedback and Evaluations</h2>
         <hr>
@@ -14,18 +14,21 @@
     <div class="table-responsive">
         <table class="table table-bordered ">
             <tr>
-                <th  scope="col">SUBJECT</th>
-                <th  scope="col">AVERAGE RATING </th>
-                <th  scope="col">OVERALL IMPRESSION </th>
-                <th  scope="col">POLARITY </th>
-                <th  scope="col">ACADEMIC YEAR </th>
-                <th  scope="col">SEMESTER </th>
-                <th  scope="col">OPTIONS </th>
+                <th scope="col">Subject</th>
+                <th scope="col">Average</th>
+                <th scope="col">Rating</th>
+                <th scope="col">Overall Impression</th>
+                <th scope="col">Polarity</th>
+                <th scope="col">Academic Year</th>
+                <th scope="col">Semester</th>
+                <th scope="col">Options</th>
             </tr>
+            
             {% for i in teacher_evaluations %}
             <tr>
                 <td>{{ i.section_subject_faculty.subjects }} </td>
                 <td>{{ i.average_rating }}</td>
+                <td>{{ i.get_rating_category }}</td>
                 <td>{{ i.comments }}</td>
                 <td>{{ i.predicted_sentiment }}</td>
                 <td>{{ i.academic_year }}</td>
@@ -43,4 +46,5 @@
         </table>
     </div>
 </div>
+
 {% endblock feature %}
